# Bot0_config_agent

./: .gitignore  .llm_config.json  .llm_config.json_gptq  .llm_config.json_llama3-8  1  =4.41.0  README.md  autopush.sh  autostashpullpush.sh  download_llam3_awq_hf_default_cache.py  download_llam3_clean.py  download_llam3_to_hf_default_cache.py  download_llama2_7b_gptq_hf_default_cache.py  downloadllama.py  env_var_names.txt  logging_config.py  manual-packages.txt  mcp_client_old.py  mcp_server.py  mcp_server_old.py  model_smoke_test.py  model_smoke_tests.py  models.yaml  pyproject.toml  pytest.ini  readme.txt  regression_runner.py  regression_summary.md  requirements.txt  test_gptq_quant_models.py  test_llama2_gptq.py  test_load_generate_local_llm.py  test_load_model_config.py  testtalkllm.py  testtransformer.py
agent/: :  cli.py  cli_test.py  core.py  core_walid.py  executor.py  intent_classifier.py  intent_classifier_core.py  intent_classifiers.py  llm_manager.py  llm_manager_backup.py  llm_manager_edited.py  llm_manager_walid.py  llm_manager_xf.py  llm_manager_xf_version.py  llm_openai.py  llm_router.py  mcp_client.py  planner.py  planner_walid.py  prompt_builder.py  test_prompt.py  tool_chain_executor.py  tool_chain_executor_walid.py  tool_chain_fsm.py
agent_models/: __init__.py  agent_models.py  fanout_models.py  llm_response_models.py  llm_response_validators.py  step_state.py  step_status.py
config/: model_configs.yaml  paths.py  prompts_config.yaml
configs/: api_models.py  model_configs.yaml  model_configs.yaml_backup  model_configs_backup.yaml  paths.py
documents/: deepseek_coder_1_3b_gptq_dequantized_weights_stats_by_layer.csv  gemma_2_2b_gptq_dequantized_weights_stats_by_layer.csv  lfm2_1_2b_weights_stats_by_layer.csv  llama_2_7b_chat_gptq_dequantized_weights_stats_by_layer.csv  llama_3_2_3b_gptq_dequantized_weights_stats_by_layer.csv  phi_3_5_mini_awq_dequantized_weights_stats_by_layer.csv  project notes.docx  qwen3_1_7b_instruct_gptq_dequantized_weights_stats_by_layer.csv  qwen3_4b_awq_awq_dequantized_weights_stats_by_layer.csv  ~$oject notes.docx
downloaders/: download_all_models.py  download_llama2_7b_gptq_quantized.py  liquidAIdownload.py  testcpp.py  testfalcon.py  tinyLLMdownload.py  tinyLLMdownloadfull.py
loaders/: =2.0  load_model_config.py  load_model_configs.py  model_config_models.py  model_configs.json  model_configs.yaml  model_configs_models.py  model_info.yaml  models.yaml  models_configs.json
older_files/: agent_prompts.yaml_with_macros.j2  cli_test.py  cli_walid.py  core_walid.py  executor.py_backup  executor_walid.py  llm_manager_backup.py  llm_response_walid.py  load_agent_prompts_older_version.py  model_configs_models_backup.py  summarize_files_walid.py  test_prompt.py  tool_models_old_version.py  tool_registry_backup.json  tool_registry_old_version.json  (+1 more)
tools/: README.md  (+38 more)
(+179 files in other folders)
