[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bot0-config-agent"
version = "0.1.0"
description = "A local-first configuration agent that uses LLaMA to reason and run tools."
authors = [{ name = "Your Name" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "transformers",
    "sentence-transformers",
    "faiss-cpu",
    "sqlite-utils",
    "pylance>=0.10.15",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "torchaudio>=2.5.1",
    "pylint>=3.2.7",
    "black>=24.8.0",
    "python-dotenv>=1.0.1",
    "optimum>=1.23.3",
]

[tool.setuptools.packages.find]
where = ["."]

[dependency-groups]
dev = [
    "black>=24.8.0",
    "pylint>=3.2.7",
]

