[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bot0-config-agent"
version = "0.1.0"
description = "A local-first configuration agent that uses LLaMA to reason and run tools."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]

# Keep only true runtime deps here (lightweight core)
dependencies = [
  "pydantic>=2.10.6",
  "jinja2>=3.1.6",
  "python-dotenv>=1.0.1",
  "tabulate>=0.9.0",
  "humanize>=4.10.0",
  "aiolimiter>=1.2.1",
  "sqlite-utils>=3.37.1",
  "faiss-cpu>=1.8.0.post1",
  "safetensors>=0.4.5"
]

# Extras let people opt into heavy stacks
[project.optional-dependencies]
llm = [
  "transformers>=4.44.0",
  "optimum>=1.23.3",
  "torch==2.5.1",
  "torchvision==0.20.1",
  "torchaudio==2.5.1",
]
gpu = ["pynvml>=11.5.3"]
dev = [
  "pytest>=8.3.5",
  "black>=24.8.0",
  "pylint>=3.2.7",
  "jupyter>=1.1.1",
  "matplotlib>=3.7.5"
]

# CLI entrypoint (unchanged by src-layout)
[project.scripts]
bot0 = "bot0_config_agent.cli:main"

# Tell Setuptools to look in src/
[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["bot0_config_agent*"]

# Include your templates/configs in the wheel
[tool.setuptools.package-data]
"bot0_config_agent.data" = ["*.yaml", "*.yaml.j2", "*.json"]

"bot0_config_agent.tools.registry" = [
  "_manifest.yaml",
  "*.json"            # use this if your registry files are plain .json (not *.tool.json)
]